tests/baselines/reference/parserMemberAccessorDeclaration14.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration14.ts (1 errors) ====
    class C {
       set Foo(a: number, b: number) { }
           ~~~
!!! parserMemberAccessorDeclaration14.ts(2,8): error TS1049: 'set' accessor must have exactly one parameter.
    }